Fix de la variable del play

--- a/playbooks/play1.yml
+++ b/playbooks/play1.yml
@@ -2,6 +2,9 @@
 - name: Web server
   hosts: linux1
   become: true
+
+  vars:
+    - website_name: Test de Ansible-AWX
   tasks:
     - name: Instalar Nginx
       apt:
