--- a/playbooks/play1.yml
+++ b/playbooks/play1.yml
@@ -4,7 +4,7 @@
   become: true
 
   vars:
-    - website_name: Test de Ansible-AWX
+    website_name: Test de Ansible-AWX
   
   vars_files:
     - ./vars/secrets.yml
